--- a/new/css/default.css
+++ b/new/css/default.css
@@ -986,14 +986,35 @@ html, body {
 	width: 100%;
 	text-align: center;
 }
-.work-exp-1 {
-	display: inline-block;
+.work-exp-left, .work-exp-right {
+	display: block;
+	margin-left: calc(50% - 100px);
 	width: 200px;
 	height: 100px;
-	background-color: blue;
+	margin-bottom: 40px;
+	background-color: green;
+}
+.work-logo {
+
+}
+.work-company {
+
+}
+.work-position {
+
+}
+.work-description {
+	
 }
 
-@-webkit-keyframes fadeInLeftBig {
+.animated {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(-2000px, 0, 0);
@@ -1007,7 +1028,7 @@ html, body {
   }
 }
 
-@keyframes fadeInLeftBig {
+@keyframes fadeInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(-2000px, 0, 0);
@@ -1021,12 +1042,12 @@ html, body {
   }
 }
 
-.fadeInLeftBig {
-  -webkit-animation-name: fadeInLeftBig;
-          animation-name: fadeInLeftBig;
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
 }
 
-@-webkit-keyframes fadeInRightBig {
+@-webkit-keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(2000px, 0, 0);
@@ -1040,7 +1061,7 @@ html, body {
   }
 }
 
-@keyframes fadeInRightBig {
+@keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(2000px, 0, 0);
@@ -1054,7 +1075,7 @@ html, body {
   }
 }
 
-.fadeInRightBig {
-  -webkit-animation-name: fadeInRightBig;
-          animation-name: fadeInRightBig;
+.fadeInRight {
+  -webkit-animation-name: fadeInRight;
+          animation-name: fadeInRight;
 }
