--- a/new/css/default.css
+++ b/new/css/default.css
@@ -275,7 +275,7 @@ html, body {
 }
 .title.one {color: #404141; font-size: 37px; letter-spacing: 5px; padding: 80px 0 30px; text-transform: uppercase;}
 .title.two {color: #757575; font-size: 17px; font-family: 'Open Sans', sans-serif; width: 680px; margin: 50px auto;}
-.light {background: #fff; position: relative;}
+.light {background: #fff; padding-bottom: 20px;}
 .dark:after {
 	content: '';
 	position: absolute;
@@ -619,23 +619,6 @@ html, body {
 .folio-btn:last-child {margin-right: 0;}
 .folio-btn.active {background: #77be32 !important; color: #fff !important;}
 .ch-grid {position: relative; list-style: none;}
-
-/* Logos Caroussel */
-.caroufredsel_wrapper {margin: auto !important}
-#logos {padding: 0;}
-.list_carousel.responsive {
-	width: auto;
-	margin-left: 0;
-	margin: 85px 0;
-}
-.list_carousel li {
-	width: 295px;
-	height: 100px;
-	padding: 0;
-	display: block;
-	float: left;
-}
-.list_carousel li img {width:100%}
 
 /* Image Footer Spacer */
 .img-spacer {
@@ -1004,7 +987,7 @@ html, body {
 
 }
 .work-description {
-	
+
 }
 
 .animated {
