--- a/new/css/default.css
+++ b/new/css/default.css
@@ -96,7 +96,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
-.mk-video-mask {
+.video-mask {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -184,7 +184,8 @@ html, body {
 	font-weight: 400;
 }
 .second-title span {color: #4cddf3; font-weight: 600;}
-.buy-logo {
+.continue-button
+ {
 	width: 135px;
 	margin: 40px auto 0;
 	height: auto;
@@ -207,7 +208,8 @@ html, body {
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 }
-.buy-logo:hover {border: 2px solid #fff !important; background-color: #77be32;}
+.continue-button
+:hover {border: 2px solid #fff !important; background-color: #77be32;}
 .main-title {
 	color: #fff;
 	height: 385px;
@@ -254,7 +256,7 @@ html, body {
 	transition-timing-function: ease;
 	-webkit-transition-timing-function: ease; /* Safari and Chrome */
 }
-.main-title li.t-current {
+.main-title li.current-title {
 	opacity: 1;
 	top: 0;
 	-webkit-transition: all 1s ease-in-out;
@@ -868,7 +870,7 @@ html, body {
 }
 
 /* Jump Menu */
-#nav2 {
+#navbar {
 	display:none;
 	width: 60em; /* 1000 */
 	font-family: 'Open Sans', sans-serif;
@@ -878,19 +880,19 @@ html, body {
 	left: 50%;
 	margin-left: -30em; /* 30 480 */
 }
-#nav2 > a {
+#navbar > a {
 	display: none;
 }
-#nav2 li {
+#navbar li {
 	position: relative;
 }
-#nav2 li a {
+#navbar li a {
 	color: #999;
 	display: block;
 	text-decoration: none;
 	text-transform: uppercase;
 }
-#nav2 span:after {
+#navbar span:after {
 	width: 0;
 	height: 0;
 	border: 0.313em solid transparent; /* 5 */
@@ -904,60 +906,60 @@ html, body {
 }
 
 /* first level */
-#nav2 > ul {
+#navbar > ul {
 	height: 3.75em; /* 60 */
 	background-color: #f5f5f5;
 	padding: 0;
 }
-#nav2 > ul > li {
+#navbar > ul > li {
 	width: 25%;
 	height: 100%;
 	float: left;
 }
-#nav2 > ul > li > a {
+#navbar > ul > li > a {
 	height: 100%;
 	font-size: 1.5em; /* 24 */
 	line-height: 2.5em; /* 60 (24) */
 	text-align: center;
 }
-#nav2 > ul > li:not( :last-child ) > a {
+#navbar > ul > li:not( :last-child ) > a {
 	border-right: 1px solid #cc470d;
 }
-#nav2 > ul > li:hover > a,
-#nav2 > ul:not(:hover) > li.active > a {
+#navbar > ul > li:hover > a,
+#navbar > ul:not(:hover) > li.active > a {
 	color:#333;
 }
 
 /* second level */
-#nav2 li ul {
+#navbar li ul {
 	background-color: #cc470d;
 	display: none;
 	position: absolute;
 	top: 100%;
 }
-#nav2 li:hover ul {
+#navbar li:hover ul {
 	display: block;
 	left: 0;
 	right: 0;
 }
-#nav2 li:not(:first-child):hover ul {
+#navbar li:not(:first-child):hover ul {
 	left: -1px;
 }
-#nav2 li ul a {
+#navbar li ul a {
 	font-size: 1.25em; /* 20 */
 	border-top: 1px solid #e15a1f;
 	padding: 0.75em; /* 15 (20) */
 }
 
 @media only screen and (max-width: 62.5em) { /* 1000 */
-	#nav2 {
+	#navbar {
 		display: none;
 		width: 100%;
 		position: static;
 		margin: 0;
 	}
 }
-#homedevice {height:100%; display:none; background-image: url("../img/bg.jpg"); background-size: cover;}
+#mobile-background {height:100%; display:none; background-image: url("../img/bg.jpg"); background-size: cover;}
 
 /* Green Shaders */
 .green .s-ico,.green .sl-ico,.green .ch-grid,.green .f-ico,.green .list-dot,.green .p-two {background-color: #77be32;}
